# weld-tui

./: .coderabbit.yaml  .gitignore  Cargo.toml  LICENSE  README.md  justfile  mise.toml  renovate.json
.claude/: CLAUDE.md  SESSION_CONTEXT.md  settings.json
.claude/agents/: staff-engineer.md
.githooks/: post-merge  pre-commit
.github/workflows/: ci.yml
.superpowers/brainstorm/11631-1775159054/content/: approaches.html  file-diff-layout.html
.superpowers/brainstorm/11631-1775159054/state/: events  server-stopped
.superpowers/brainstorm/16946-1775162219/content/: file-diff-layout-v2.html  file-diff-layout-v3.html  file-diff-layout-v4.html
.superpowers/brainstorm/16946-1775162219/state/: server-stopped
docs/superpowers/plans/: 2026-04-02-weld-phase1-file-diff-mvp.md
docs/superpowers/specs/: 2026-04-02-weld-tui-diff-design.md
test-fixtures/: left.go
test-fixtures/identical/: left.txt
test-fixtures/insert-delete/: right.txt
test-fixtures/mixed/: right.go
test-fixtures/simple-replace/: right.txt
weld-core/: Cargo.toml
weld-core/src/: diff.rs  display.rs  file_io.rs  inline_diff.rs  lib.rs  text.rs  undo.rs
weld-core/src/file/: diff.rs  diff_model.rs  display.rs  inline_diff.rs  io.rs  mod.rs
weld-core/tests/: fixture_pipeline.rs
weld-tui/: Cargo.toml
weld-tui/src/: app.rs  config.rs  default_config.toml  event.rs  input.rs  main.rs  overlay.rs  theme.rs  viewport.rs
weld-tui/src/file_diff/: minimap.rs  mod.rs  view.rs
