[package]
name = "weld-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI file and directory diff viewer with merge capabilities"

[[bin]]
name = "weld"
path = "src/main.rs"

[dependencies]
weld-core = { path = "../weld-core" }
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
